# AFPD

./: .gitignore  .gitmodules  CMakeLists.txt  config.ini
data/: ABPO00MDG_R_20250010000_01D_30S_MO.RNX
output/2025/S1C/: ABPO00MDG_R_20250010000_01D_30S_MO.csv
output/2025/S1W/: ABPO00MDG_R_20250010000_01D_30S_MO.csv
output/2025/S2I/: ABPO00MDG_R_20250010000_01D_30S_MO.csv
output/2025/S2W/: ABPO00MDG_R_20250010000_01D_30S_MO.csv
output/2025/S6I/: ABPO00MDG_R_20250010000_01D_30S_MO.csv
output/2025/S7I/: ABPO00MDG_R_20250010000_01D_30S_MO.csv
python/: dtw.py  merge_result.py
src/: main.cpp  rnx_extract.cpp  rnx_extract.h  signals.h  snr_extract.c
tmp/: stations_data.json
